--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,9 @@
 [MASTER]
 
 ignore=docs, __pycache__
-disable=no-member
+disable=
+	no-member,
+	too-many-arguments,
+	too-few-public-methods,
+	logging-format-interpolation
 
