--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install requirements
       run: |
         python -m pip install --upgrade pip
-        pip install --editable ".[ci]"
+        pip install -r requirements-ci.txt
     - name: Lint with flake8
       run: |
         flake8 . --count --show-source --statistics
