Add Initial implementation (#1)
* Add initial files

* Add first tests

* Create ci.yml

* Update README.md

* Update CI

* Ignore *.sublime-workspace

* Update .flake8

* Remove some Python versions from CI workflow

* Add missing CI requirement

* Update requirement version locking

* Start to connect to Airtable

* Add .pylintrc

* Implement preliminary caching

* Improve docs

* Improve docs

* Update actions

* Update README.md

* Update CI

* Fix setup.py

* Fix actions

* Fix tests

* Update actions

* Update README.md

--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,8 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+docs/build/
+docs/source/generated
 
 # PyBuilder
 target/
@@ -127,3 +128,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Sublime Text
+*.sublime-workspace
