--- a/.pylintrc
+++ b/.pylintrc
@@ -5,5 +5,6 @@ disable=
 	no-member,
 	too-many-arguments,
 	too-few-public-methods,
-	logging-format-interpolation
+	logging-format-interpolation,
+	missing-module-docstring
 
