--- a/.editorconfig
+++ b/.editorconfig
@@ -8,26 +8,18 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-# Matches multiple files with brace expansion notation
-# Set default charset
-[*.{js,py}]
-charset = utf-8
-
-# 4 space indentation
+# Python
 [*.py]
 indent_style = space
 indent_size = 4
+max_line_length = 88
 
-# Tab indentation (no size specified)
-[Makefile]
-indent_style = tab
-
-# Indentation override for all JS under lib directory
-[lib/**.js]
+# YAML
+[*.yaml]
 indent_style = space
 indent_size = 2
 
-# Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml}]
+# JSON
+[*.json]
 indent_style = space
-indent_size = 2
+indent_size = 4
